# linux-secure-base

./: .gitignore  .shellcheckrc  Makefile  PYTHON-UMSTELLUNG.md  README.md  SIGNING-KEY.asc  installekonzept-python-lsb-installer.md  pyproject.toml  requirements.txt
docs/: INDEX.md  konzept.md  python-architektur.md
docs/Anleitung/: 01-vorbedingungen.md
docs/anleitung/: 00-installation.md  00-vorbedingungen.md  01-grundkonfiguration.md  01-vorbedingungen.md  02-mail-versand.md  03-hauptbenutzer-einrichten.md  04-ssh-haertung-mit-totp.md  05-firewall.md  06-brute-force-schutz.md  07-schadsoftware-schutz.md  08-protokollierung-und-auditing.md  09-automatische-sicherheitsupdates.md  10-datensicherung.md  11-monitoring.md  12-haertungspruefung.md  13-webserver-nginx.md  14-datenbankserver-postgresql.md  INDEX.md
docs/dokumentation/: 001-systembeschreibung.md
docs/handbuch/: installation.md
docs/installer/: lsb-installer.md  pifos-vendoring.md  secure-base-installer.md
docs/konzept/: datensicherung.md  haertung.md  haertungskonzept.md  mail-versand.md  monitoring.md  nginx-grundsatz.md  protokollierung-und-automatische-updates.md  sicherheitsanforderungen.md  systemtopologie.md
docs/pifos/: anforderungen.md  bereitstellung.md  diagramme.md  implementierungsplan.md  konzept.md  machbarkeit.md
docs/portierung/: debian13-bestandsaufnahme.md
docs/systembeschreibung/: 001-systembeschreibung.md  01-systembeschreibung.md  02-haertung.md  03-mail-versand.md  04-protokollierung-und-automatische-updates.md  05-datensicherung.md  06-monitoring.md  07-nginx.md  08-postgresql.md  INDEX.md
docs/umstellungen/: 01-f5278f8-nach-fd1824e-sicherungsablagen-var-backup.md  01-sicherungsablagen-var-backup.md  02-fd1824e-nach-02f7865-rkhunter-ausnahmen.md  02-rkhunter-ausnahmen.md  03-02f7865-nach-dac64e8-logwatch-tagesbericht.md  04-12e22af-nach-286d19c-anmeldehistorie-und-rsyslog.md  05-0235470-nach-d8c517b-cron-dateiname-und-sudo-logfile.md  06-b4bfe43-nach-7eb5452-drift-schutz-und-alt-sicherungen.md  06-bd0e2b3-nach-7eb5452-drift-schutz-und-alt-sicherungen.md  07-63688df-nach-3b6b79c-backup-mounts-ausschliessen.md  08-3edb859-nach-38e3a04-backup-sperre-und-zeitbegrenzung.md  09-f6e9c4c-nach-f3f8751-absender-domain.md  10-468029e-nach-a9fe7a9-monit-instance-ohne-mail.md
etc/lsb/: lsb.conf.example
etc/secure-base/: secure-base.conf.example
installer/: README.md  lsb-installer.md  secure-base  secure-base-installer
installer/conf/: secure-base-optional.conf.example  secure-base.conf.example
installer/conf.example/: common.conf.example  ssh.conf.example
installer/lib/: apt.sh  check.sh  common.sh  conf.sh  dispatch.sh  doc.sh  file.sh  log.sh  optional.sh  svc.sh  system.sh  ui.sh
installer/logrotate.d/: secure-base
installer/modules/: base.sh  ssh.sh
tests/: __init__.py
tests/integration/: __init__.py  test_base_module.py  test_fail2ban_module.py  test_installer_e2e.py  test_logging_module.py  test_lynis_module.py  test_monit_module.py  test_nginx_module.py  test_postfix_module.py  test_postgresql_module.py  (+6 more)
(+89 files in other folders)
