[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-base-installer"
# Einzige Quelle der Version ist secure_base.__version__ — sie wird von hier
# abgeleitet, damit das Auslieferungspaket ohne pyproject.toml auskommt.
dynamic = ["version"]
description = "Linux Secure Base — Installer für ein gehärtetes Grundsystem"
requires-python = ">=3.13"

[tool.setuptools.dynamic]
version = { attr = "secure_base.__version__" }

[tool.setuptools.packages.find]
where = ["usr/lib"]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-include = ["bin/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "BLE", "C4", "UP", "SIM", "TID", "S", "RUF"]
ignore = ["S603"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.13"
# Nur der Eigencode wird streng geprüft. Die eingebettete pifos-Kopie unter
# usr/lib/pifos ist Fremdcode und wird nicht als Eigencode mitgeprüft (analog
# zu ruff SOURCES); ihre Typen werden nur zur Auflösung mitgelesen (Override
# unten).
files = ["usr/lib/secure_base", "tests"]
strict = true

# pifos ist als eingebettete Kopie Teil des Repos (usr/lib/pifos), aber ohne
# py.typed-Marker. Statt ignore_missing_imports (das pifos-Symbole auf Any
# abbildet und z. B. beim Erben von Module einen eigenen Folgefehler erzeugt)
# liest mypy die echten Inline-Annotationen von pifos mit (konv-scripting-
# python.md Abschnitt 5.4, selektiver Override statt global).
[[tool.mypy.overrides]]
module = "pifos.*"
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
